# adrive-api-rs

./: .gitignore  Cargo.toml  README.md
adrive-api/: Cargo.toml  README.md
adrive-api/examples/: is_dir.rs  login.rs
adrive-api/src/: app.rs  auth2.rs  lib.rs  main.rs
adrive-api/src/data_structures/: auth.rs  file.rs  user.rs
adrive-sign-in/: Cargo.toml
adrive-sign-in/src/: main.rs
examples/: credentials.rs  download.rs  error.rs  file.rs  get_access_token.rs  get_qrcode.rs  get_qrcode_status.rs  into.rs  listdir.rs  move.rs  path.rs  remove.rs  search.rs  ser.rs  session.rs  session2.rs  signature.rs  starred.rs  time.rs  upload.rs  vec.rs  writer.rs
src/: auth.rs  config.rs  constants.rs  core.rs  http.rs  lib.rs  lib2.rs  main.rs  self_hosting.rs  utils.rs
src/apis/: credentials.rs  file.rs  info.rs  mod.rs  signature.rs
src/data/: auth.rs  error.rs  file.rs  info.rs  mod.rs  token.rs  user.rs
src/data/file/: create.rs  mod.rs
src/data_structures/: auth.rs  file.rs  mod.rs  session.rs
src/data_structures/files/: create_file.rs  download.rs  mod.rs  move.rs  remove.rs  starred.rs
src/objects/: album.rs  config.rs  credential.rs  dir.rs  drive.rs  extra.rs  file.rs  mod.rs  safebox.rs  system.rs  token.rs  user.rs
src/signin/: mod.rs  qrcode.rs
src/utils/: deser.rs  mod.rs
tests/: common.rs  file.rs  user.rs
