[package]
name = "adrive-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.24.1", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0.91"
derivative = "2.2.0"
dirs = "4.0.0"
anyhow = "1.0.68"
sha1_smol = "1.0.0"
md5 = "0.7.0"
base64 = "0.21.0"
async-recursion = "1.0.4"