[package]
name = "adrive-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.13", features = ["json", "stream"] }
tokio = { version = "1.24.1", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0.91"
derivative = "2.2.0"
dirs = "4.0.0"
sha1_smol = { version = "1.0.0", features = ["std"] }
md5 = "0.7.0"
base64 = "0.21.0"
async-recursion = "1.0.4"
futures-util = "0.3"
# secp256k1 = { version = "0.27.0", features = [
#     "rand-std",
#     "bitcoin-hashes",
#     "recovery",
# ] }
hex = "0.4.3"
k256 = { version = "0.13.1", features = ["ecdsa", "sha256"] }
rand_core = "0.6.4"
sha3 = "0.10.8"
url = "2.5.0"
async-trait = "0.1.75"
axum = "0.7.4"
